# NotesMirror

./: .gitignore  README.md  config.example.json  plan.md  pyproject.toml
NotesMirror/: __init__.py  __main__.py  config.json
NotesMirror/cli/: __init__.py  config.py  main.py
NotesMirror/db/: connection.py  schema.py
NotesMirror/sync/: apple.py
NotesMirror/utils/: platform.py
cli/: config.py  formatter.py
db/: __init__.py  query.py
models/: __init__.py  note.py  notebook.py  sync_run.py
sync/: __init__.py  sync_engine.py
tests/: test_apple_integration.py  test_cli.py  test_db_query.py  test_models.py  test_sync_engine.py
tests/fixtures/: load_fixtures.py  sample_notes.json
utils/: __init__.py
