[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NotesMirror"
version = "0.1.0"
description = "Cross-platform CLI for Apple Notes with DuckDB cache"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
notes = "NotesMirror.__main__:main"

[tool.setuptools.packages.find]
include = ["NotesMirror*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "G"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that exercise external systems or platform integrations",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
